--- a/build.gradle
+++ b/build.gradle
@@ -77,8 +77,8 @@ android {
 
         multiDexEnabled true
 
-        versionCode = 20000099
-        versionName = "2.0.0"
+        versionCode 20170413
+        versionName "20170413"
 
         // adapt structure from Eclipse to Gradle/Android Studio expectations;
         // see http://tools.android.com/tech-docs/new-build-system/user-guide#TOC-Configuring-the-Structure
@@ -88,7 +88,7 @@ android {
         productFlavors {
             // used for f-droid
             generic {
-                applicationId 'com.nextcloud.client'
+                applicationId 'com.nextcloud.android.dev'
                 dimension "default"
             }
 
@@ -104,6 +104,10 @@ android {
                 // .client
                 applicationId 'com.custom.client'
                 dimension "default"
+            }
+            
+            versionDev {
+                applicationId "com.nextcloud.android.dev"
             }
         }
 
@@ -124,6 +128,10 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/LICENSE'
+    }
+
+    signingConfigs {
+        release
     }
 
     task checkstyle(type: Checkstyle) {
@@ -181,6 +189,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
+
+}
+
+if (project.hasProperty('RELEASE_STORE_FILE')) {
+    android.signingConfigs.release.storeFile = file(RELEASE_STORE_FILE)
+    android.signingConfigs.release.storePassword = RELEASE_STORE_PASSWORD
+    android.signingConfigs.release.keyAlias = RELEASE_KEY_ALIAS
+    android.signingConfigs.release.keyPassword = RELEASE_KEY_PASSWORD
 }
 
 dependencies {
